services/non-named-votes-ai/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: non-named-votes-ai
  name: non-named-votes-ai
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3005
  selector:
    app: non-named-votes-ai
